Fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 Website development in progress.
 
-<url>https://linkedin.com/wptaylor</url>
+<url>https://linkedin.com/wp-taylor</url>
 
 </body>
 </html>
