Made LinkedIn Hyperlink

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 Website development in progress.
 
-<url>https://linkedin.com/wp-taylor</url>
+<a href="https://linkedin.com/wp-taylor">Here's my LinkedIn</a>
 
 </body>
 </html>
