--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 Website development in progress.
 
-<a href="https://linkedin.com/wp-taylor">Here's my LinkedIn</a>
+<a href="https://linkedin.com/in/wp-taylor">Here's my LinkedIn</a>
 
 </body>
 </html>
