--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 Website development in progress.
 
 <a href="https://linkedin.com/in/wp-taylor">Here's my LinkedIn</a>
+<div>
+
+    <img src="sleeping_beauty.jpg" alt="Italian Trulli">
+
+</div>
+
+
 
 </body>
 </html>
