--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Website development in progress.
     <img src="sleeping_beauty.jpg" alt="Italian Trulli">
 
 </div>
-
+<b>sleeping beauty</b>
 
 
 </body>
