--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@ Website development in progress.
 <a href="https://linkedin.com/in/wp-taylor">Here's my LinkedIn</a>
 <div>
 
-    <img src="sleeping_beauty.jpg" alt="Italian Trulli">
+    <img src="sleeping_beauty.jpg" alt="Italian Trulli" style="width:500px;height:600px;">
+    <img src="civ.jpg" alt="Smooth" style="width:500px;height:600px;">
 
 </div>
-<b>sleeping beauty</b>
+<b>sleeping beauties</b>
+
 
 
 </body>
