--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@ Website development in progress.
     <img src="civ.jpg" alt="Smooth" style="width:500px;height:600px;">
 
 </div>
+<div>
+
+    <img src="zodrick.jpg" alt="Alcohol is bad" style="width:500px;height:600px;">
+    <img src="cutie.jpg" alt="Tired" style="width:500px;height:600px;">
+
+</div>
 <b>sleeping beauties</b>
 
 
