--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
-    <meta charset="UTF-8">
-    <title>Will's Website</title>
+    <title>Will Taylor</title>
 </head>
+  
 <body>
-
-Website development in progress.
-
-<a href="https://linkedin.com/in/wp-taylor">Here's my LinkedIn</a>
-
+    <center>
+        <iframe src=
+"https://www.willtaylor.ca/Will_Taylor_Portfolio.pdf" 
+                width="800" 
+                height="500">
+        </iframe>
+    </center>
 </body>
 </html>
