--- a/index.html
+++ b/index.html
@@ -5,13 +5,5 @@
     <title>Will Taylor</title>
 </head>
   
-<body>
-    <center>
-        <iframe src=
-"https://www.willtaylor.ca/Will_Taylor_Portfolio.pdf" 
-                width="800" 
-                height="500">
-        </iframe>
-    </center>
-</body>
+<meta http-equiv="refresh" content="0; URL=https://www.willtaylor.ca/Will_Taylor_Portfolio.pdf" />
 </html>
