--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
     <title>Will Taylor</title>
 </head>
   
-<meta http-equiv="refresh" content="0; URL=https://www.willtaylor.ca/Will_Taylor_Portfolio.pdf" />
+<meta http-equiv="refresh" content="0; URL=https://www.willtaylor.ca/portfolio.pdf" />
 </html>
